@@ -290,7 +290,7 @@ task uploadWebsitePages(type:Exec) {
             '--include="*.jpg"',
             '--include="*.jnlp"',
             '--include="*.bat"',
-            "${projectDir}/web", 'richieigenmann@web.sourceforge.net:/home/project-web/j-po/htdocs/')
+            "${projectDir}/web/", 'richieigenmann@web.sourceforge.net:/home/project-web/j-po/htdocs/')
 }
 
 task uploadJavadoc(type:Exec) {
@@ -305,10 +305,11 @@ task uploadJavadoc(type:Exec) {
 task uploadWindowsInstaller(type:Exec) {
     group 'website'
     description 'Publishes the JPO windows installer bundle'
-    dependsOn buildWindowsInstaller
+    //dependsOn buildWindowsInstaller
     // note that the ssh key of sourceforge needs to be in /home/richi/.ssh/id_rsa
     // and that the known_hosts needs to have the host key ssh-keyscan -t rsa web.sourceforge.net
-    commandLine ('rsync', '-avP', "${buildDir}/executables/JPO-Installer-${jpoVersion}.exe", 'richieigenmann@web.sourceforge.net:/home/frs/project/j-po/')
+    //commandLine ('rsync', '-avP', "${buildDir}/executables/JPO-Installer-${jpoVersion}.exe", 'richieigenmann@web.sourceforge.net:/home/frs/project/j-po/')
+    commandLine ('rsync', '-avP', "${buildDir}/executables/JPO-${jpoVersion}.exe", 'richieigenmann@web.sourceforge.net:/home/frs/project/j-po/')
 }
 
 task uploadWebsite() {
@@ -360,3 +361,5 @@ project.tasks["sonarqube"].dependsOn jacocoTestReport
 //            '--main-jar', jar.archiveFileName.get()
 //    environment << [JPACKAGE_DEBUG: true]
 //}
+
+// /usr/java/jdk-15.0.1/bin/jpackage --package-type exe --name JPO --description "Java Picture Organizer" --vendor "Richard Eigenmann" --app-version 0.14 --main-jar Jpo-all.jar --java-options '--enable-preview' --win-shortcut --win-menu
